--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 	"devDependencies": {
 		"@nestjs/cli": "^11.0.0",
 		"@nestjs/testing": "^11.1.5",
+		"@types/jest": "^30.0.0",
 		"@types/node": "^20.0.0",
 		"@types/supertest": "^6.0.0",
 		"jest": "^29.0.0",
